Bug 1797170 - Use the proper widget to obtain per-monitor metrics (e.g. DPI) for doing a fake show. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D160875